Refactored CarsLoadReportGenerator (#545)
* Refactored CarsLoadReportGenerator

* Fixed CarsLoadReportGeneratorITest

* HotFix

* GotFix

* HotFix

* fixed compilation

* refactoring by Taras

* Fix route grouping

* Fix test

---------

Co-authored-by: Taras Orlovskyi <taras.orlovskyi@nordstrom.com>
Co-authored-by: mbiloshytskyi <belosh59@gmail.com>